--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,15 +13,16 @@
         android:layout_height="0dp"
         android:layout_weight="1">
 
+        <!-- Presentation -->
         <TextView
             android:id="@+id/tv_timer_display"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:textSize="40sp"
-            android:hint="00:00:00"
             android:visibility="gone"/>
 
+        <!-- Input -->
         <EditText
             android:id="@+id/et_timer_display"
             android:layout_width="wrap_content"
@@ -30,50 +31,6 @@
             android:textSize="40sp"
             android:hint="00:00:00"/>
 
-        <LinearLayout
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:layout_gravity="center"
-            android:visibility="gone">
-
-            <EditText
-                android:id="@+id/et_hours"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:textSize="40sp"
-                android:inputType="numberDecimal"
-                android:maxLength="2"
-                android:text="00"/>
-
-            <TextView
-                android:text=":"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-            <EditText
-                android:id="@+id/et_minutes"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:textSize="40sp"
-                android:inputType="numberDecimal"
-                android:maxLength="2"
-                android:text="00"/>
-
-            <TextView
-                android:text=":"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-            <EditText
-                android:id="@+id/et_seconds"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:textSize="40sp"
-                android:inputType="numberDecimal"
-                android:maxLength="2"
-                android:text="00"/>
-
-        </LinearLayout>
     </FrameLayout>
 
     <!-- BUTTON PANEL -->
